# binfold

./: .gitignore  Cargo.toml  DEBUG.md  README.md  functions.json  warp_test_stats.txt
src/: binary_format.rs  constraint_matcher.rs  db.rs  db_merge.rs  json_analysis.rs  lib.rs  main.rs  mmap_source.rs  pdb_analyzer.rs  pdb_writer.rs  pe_loader.rs  progress.rs  warp.rs
