[package]
name = "warp-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
iced-x86 = "1.21"
sha1 = "0.10"
uuid = { version = "1.10", features = ["serde", "v5"] }
object = { version = "0.36", features = ["read", "pe"] }
memmap2 = "0.9"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.98"
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
