[package]
name = "binfold"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
iced-x86 = "1.21"
uuid = { version = "1.10", features = ["v5"] }
object = { version = "0.36", features = ["read", "pe"] }
memmap2 = "0.9"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.98"
pdb = "0.8.0"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.10"
pdb-sdk = { git = "https://github.com/jac3km4/pdb-sdk", version = "0.1.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
struson = "0.5"
